--- a/src/main/webapp/WEB-INF/views/diseases/show.jspx
+++ b/src/main/webapp/WEB-INF/views/diseases/show.jspx
@@ -7,5 +7,6 @@
         <field:display field="category" id="s_com_cbh_entity_Disease_category" object="${disease}" z="H4tNXlujqmp2cS9AvNuM73gGIxc="/>
         <field:display field="bigCategory" id="s_com_cbh_entity_Disease_bigCategory" object="${disease}" z="IYzFGUlPgqa2rhWbj7i0UzZp5+Q="/>
         <field:display field="symptom" id="s_com_cbh_entity_Disease_symptom" object="${disease}" z="5qNeS4Ncygoap/5SExI73oyU1A8="/>
+        <field:display field="orderDis" id="s_com_cbh_entity_Disease_orderDis" object="${disease}" z="YY6PV75w9CxEOpvoU4Lq84URaZs="/>
     </page:show>
 </div>
